objects/LAT_ContractError__c.object
<CustomObject>
    <fields>
        <fullName>LAT_Comments__c</fullName>
        <label>Comentários</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_Contract__c</fullName>
        <label>Contrato</label>
        <referenceTo>LAT_Contract2__c</referenceTo>
        <relationshipName>LAT_ContractErrors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_ProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agrupamento Produtos</label>
        <referenceTo>LAT_ReferenceProductGrouping__c</referenceTo>
        <relationshipName>LAT_Contract_Errors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LAT_Type__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Conversão Unidade de Medida/SKU Referência</fullName>
                </value>
                <value>
                    <fullName>Custo do Produto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Erros Contrato</label>
    <nameField>
        <displayFormat>CE-{000000}</displayFormat>
        <label>Erro Contrato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Erros Contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>